@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!--
+      Hank HKZW-DWS01 Door/Window Sensor
+      http://products.z-wavealliance.org/products/1896
+      http://products.z-wavealliance.org/ProductManual/File?folder=&filename=Manuals/1896/HKZW-DWS01_Product%20Manual%20.pdf
+    -->
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="list" genre="config" instance="1" index="14" label="BASIC SET command" size="1" min="0" max="1" value="0">
+            <Help>Enable/Disable BASIC SET command</Help>
+            <Item label="Enabled" value="0"/>
+            <Item label="Disabled" value="1"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="15" label="Value of the BASIC SET" size="1" min="0" max="1" value="0">
+            <Help>
+                Send BASIC SET VALUE = 255 to nodes associated with group 2 when door/window is opened.
+                Send BASIC SET VALUE = 0 to nodes associated with group 2 when door/window is closed.</Help>
+            <Item label="255" value="0"/>
+            <Item label="0" value="1"/>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="32" label="Level of low battery" units="%" size="1" min="10" max="50" value="10">
+            <Help>The value here defines the low battery</Help>
+        </Value>
+    </CommandClass>
+
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+            <Group index="2" max_associations="5" label="BASIC SET command"/>
+        </Associations>
+    </CommandClass>
+
+</Product>
