@@ -213,6 +213,9 @@ DISTFILES =	.gitignore \
 	config/gr/gr105n.xml \
 	config/greenwave/powernode1.xml \
 	config/greenwave/powernode6.xml \
+	config/hank/hkzw-dws01.xml \
+	config/hank/hkzw-so01-smartplug.xml \
+	config/hank/hkzw-so05-smartplug.xml \
 	config/hank/scenecontroller1.xml \
 	config/hank/scenecontroller4.xml \
 	config/homeseer/ezmotionplus.xml \
