@@ -182,6 +182,7 @@ Version 1.5
  - Add Devolo devices (Nechry)
  - Pull Request #1224 - Add Philio PSP05-D Motionsensor from superjunky (Nechry)
  - Add Domux devices (Nechry)
+ - Add Hank HKZW-DWS01 Door/Window Sensor (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
